<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="app_name">Driving Tracker</string>

    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_create_account">Create Account</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_event">Events</string>
    <string name="title_activity_log">Driving Log</string>
    <string name="title_activity_friend">Friends</string>

    <string name="welcome"> Welcome to Driving Tracker!</string>
    <string name="enter_user">Username</string>
    <string name="enter_password">Password</string>
    <string name="enter">Sign In</string>
    <string name="create_acc">Create Account</string>

    <string name="join">Let\'s get you started!</string>
    <string name="enter_newuser">Username</string>
    <string name="enter_newpassword">Password</string>
    <string name="create">Create!</string>

    <string name="username">Username</string>

    <string name="view_event">Create an Event</string>
    <string name="view_view_events">View Events</string>
    <string name="view_log">View Log</string>
    <string name="add_friend">Add Friend</string>
    <string name="sign_out">Sign Out</string>

    <string name="enter_friend">Enter Friend</string>
    <string name="find_friend">Find Friend</string>
    <string name="find_status">Waiting for input...</string>

    <string name="enter_passenger">Passenger</string>
    <string name="enter_time">Time Owed</string>
    <string name="title_activity_view_event">ViewEventActivity</string>

</resources>
