<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/ims"
    tools:context="com.parse.starter.EventActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/username"
            android:text="@string/username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center|top"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffff" />

        <EditText android:id="@+id/enter_passenger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/enter_passenger"
            android:background="#fafafa"
            android:singleLine="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="add passenger"
            android:id="@+id/add_passenger"
            android:layout_gravity="center_horizontal"
            android:onClick="AddPassenger" />
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.21"
            android:fillViewport="false">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >

                <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </TableLayout>

            </LinearLayout>

        </ScrollView>
        <EditText android:id="@+id/enter_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/enter_time"
            android:background="#fafafa"
            android:singleLine="true" />

        <Button
            android:id="@+id/update"
            android:text="Update"
            android:onClick="Update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>